# trailcam-classifier-app

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-macos-app.yml
model/: class_names.txt
src/trailcam_classifier_app/: __init__.py  gui.py  util.py  viewer.py
